--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>{{title}}</title>
-        <link rel="stylesheet" href="css/styles.css"/> <!-- static path for public folder is already set in app.js -->
+        <link rel="stylesheet" href="css/styles.css"/> 
     </head>
     <body>
         <div class="main-content">
@@ -21,6 +21,6 @@
                 <div class="date"></div>
             </article>
         </div>
-        <script src="js/app.js"></script> <!-- absolute path -->
+        <script src="js/app.js"></script> 
     </body>
 </html>
